--- a/homepage.html
+++ b/homepage.html
@@ -30,7 +30,7 @@
 
     <main>
         <img src="https://as2.ftcdn.net/v2/jpg/02/51/52/05/1000_F_251520533_vONoY8JylB1zz78QHPphIaboP3Zxrdkd.jpg" width="425px">
-        <h1>Baixe a versão mais atualizada do "Jogo"</h1>
+        <h1>Baixe a versão mais atualizada do SmokeCity</h1>
         <button>BAIXAR</button>
 
         <h3>Versões anteriores</h3>
